--- a/lib_method_monitor/build.gradle
+++ b/lib_method_monitor/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
-maven { url "https://jitpack.io" }
+apply plugin: 'com.github.dcendents.android-maven'
 group="com.github.kbjay"
 
 android {
